@startuml
set namespaceSeparator ::

class "AnonymousChat" {
  {static} +String COLLECTION
  {static} +String PEER_COLLECTION
}

"Chat" <|-- "AnonymousChat"

class "Request" {
  {static} +String COLLECTION
  {static} +String PEER_COLLECTION
}

"Chat" <|-- "Request"

class "ExpertChat" {
  {static} +String COLLECTION
  {static} +String PEER_COLLECTION
}

"Chat" <|-- "ExpertChat"

abstract class "Chat" {
  -FirestoreService _firestoreService
  -UserService _userService
  +String collection
  +String peerCollection
  +User? peerUser
  +String lastMessage
  +DateTime? lastMessageDateTime
  +int notReadMessages
  -ValueNotifier<List<Message>> _messages
  -StreamSubscription<dynamic>? _messagesSubscriber
  +ValueNotifier<List<Message>> messages
  +StreamSubscription<dynamic>? messagesSubscriber
  +Future<void> loadMessages()
  +void closeListeners()
}

"Chat" o-- "Services::FirestoreService"
"Chat" o-- "Services::UserService"

class "PendingChat" {
  {static} +String COLLECTION
  {static} +String PEER_COLLECTION
}

"Chat" <|-- "PendingChat"

class "ActiveChat" {
  {static} +String COLLECTION
  {static} +String PEER_COLLECTION
}

"Chat" <|-- "ActiveChat"


@enduml